# LearnOpenUSD

./: .buildinfo  .gitignore  .gitlab-ci.yml  AGENTS.md  CONTRIBUTING.md  README.md  STYLEGUIDE.md  genindex.html  index.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  usdview-install-instructions.html  why-openusd-developer-certification.html
asset-modularity-instancing/: index.html  instancing-faq.html  refining-point-instances.html  setup.html  what-is-instancing.html
asset-structure/: index.html  setup.html
beyond-basics/: active-inactive-prims.html  custom-properties.html  hydra.html  index.html  model-kinds.html  primvars.html  stage-traversal.html  value-resolution.html
composition-basics/: default-prim.html  index.html  layers.html  references.html  specifiers.html  strength-ordering.html  variant-sets.html
creating-composition-arcs/: index.html  prim-composition.html  setup.html
data-exchange/: index.html  setup.html
docs/: conf.py  glossary.md  index.md  install-usda-syntax.md  interactive-glossary.md  jupyter-notebook-setup.md  why-openusd-developer-certification.md
notebooks/: 00_what_is_openusd.ipynb  01_stage_setting.ipynb  02_scene_description_blueprints.ipynb  03_composition_basics.ipynb  04_beyond_basics.ipynb  05_creating_composition_arcs.ipynb  06_asset_structure.ipynb  07_asset_modularity_instancing.ipynb  08_data_exchange.ipynb  README.md
scene-description-blueprints/: index.html  lights.html  materials-shaders.html  schemas.html  scope.html  xform.html  xformcommonapi.html
src/: directives.py  (+1 more)
(+406 files in other folders)
