[project]
name = "utils"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "livereload>=2.7.1",
    "myst-nb>=1.2.0",
    "myst-parser>=4.0.1",
    "nvidia-sphinx-theme>=0.0.8",
    "sphinx-design>=0.6.1",
    "sphinx>=8.2.3",
    "sphinxcontrib-doxylink>=1.13.0",
    "sphinxcontrib-quizdown",
    "usd-core>=25.5",
    "usd2gltf>=0.3.5",
    "nbsphinx>=0.9.6",
    "jupytext>=1.17.2",
    "types-usd>=24.5.2",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.uv.sources]
sphinxcontrib-quizdown = { git = "https://github.com/bonartm/sphinxcontrib-quizdown" }
