[project]
name = "lousd"
version = "1.0.2"
description = "Learn OpenUSD sphinx-based website and tools."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "myst-nb>=1.2.0",
    "myst-parser>=4.0.1",
    "nvidia-sphinx-theme>=0.0.8",
    "sphinx-design>=0.6.1",
    "sphinx>=8.2.3",
    "sphinxcontrib-doxylink>=1.13.0",
    "usd-core>=25.5",
    "usd2gltf>=0.3.5",
    "jupytext>=1.17.2",
    "types-usd>=24.5.2",
    "requests==2.32.4",
    "urllib3==2.5.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.uv]
managed = true
